Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>Test on Android Camera Qrcode Scanner</p>
 
-<p>This Just for test yo Know</p>
+<p>This Just for test yo Know <a href="https://github.com/">https://github.com/</a>.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/andikatanpah/AndroidCameraQrcode">Androidcameraqrcode</a> is maintained by <a href="https://github.com/andikatanpah">andikatanpah</a>.</span>
