Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 <p>Test on Android Camera Qrcode Scanner</p>
 
+<p>oke</p>
+
 <p>This Just for test yo Know <a href="https://github.com/">https://github.com/</a>.</p>
       </section>
     </div>
