--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>Test on Android Camera Qrcode Scanner</p>
 
-<p>oke</p>
+<p>oke bisa diedit dari sini</p>
 
 <p>This Just for test yo Know <a href="https://github.com/">https://github.com/</a>.</p>
       </section>
