--- a/index.html
+++ b/index.html
@@ -33,9 +33,21 @@
 
 <p>Test on Android Camera Qrcode Scanner</p>
 
+ <div class="select">
+    <label for="audioSource">Audio source: </label><select id="audioSource"></select>
+  </div>
+
+  <div class="select">
+    <label for="videoSource">Video source: </label><select id="videoSource"></select>
+  </div>
+
+  <video muted autoplay></video>
+
+  <script src="/camera.js"></script>
+
 <p>oke bisa diedit dari sini</p>
 
-<p>This Just for test yo Know <a href="https://github.com/">https://github.com/</a>.</p>
+<p>This Just for test yo Know.</p>
       </section>
     </div>
 
