--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <video muted autoplay></video>
 
-  <script src="/camera.js"></script>
+  <script src="javascripts/camera.js"></script>
 
 <p>oke bisa diedit dari sini</p>
 
