--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!--<link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">-->
 
     <title>Android Camera QRcode by andikatanpah</title>
+    
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
   </head>
 
   <body>
