--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 <p>Test on Android Camera Qrcode Scanner</p>
 
  <div class="select">
-    <label for="audioSource">Audio source: </label><select id="audioSource"></select>
+    <label for="audioSource">Audio source: </label><select id="audioSource" onchange="myFunction()"></select>
   </div>
 
   <div class="select">
-    <label for="videoSource">Video source: </label><select id="videoSource"></select>
+    <label for="videoSource">Video source: </label><select id="videoSource" onchange="start()"></select>
   </div>
 
   <video muted autoplay></video>
