--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <script src="javascripts/camera.js"></script>
 
-<p>oke bisa diedit dari sini</p>
+<p>Audio: <span id="selectMe"></span></p>
 
 <p>This Just for test yo Know.</p>
       </section>
