--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </section>
       
         
-  <div id="logSource" style="border: 2px red dashed;">
+  <div id="logSource" style="border: 2px red dashed;font-size:10px;">
     Log Source:
   </div>
     </div>
