--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
   <div id="logSource" style="border: 2px red dashed;font-size:10px;">
     Log Source:
   </div>
+  <br/><br/>
+  see: http://cirocosta.github.io/qcode-decoder/
     </div>
   
-
+  
     <br/><br/><br/><br/><br/>
   </body>
 </html>
