--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Android Camera QRcode by andikatanpah</title>
     
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="javascripts/qrcode-decoder.js"></script>
   </head>
 
   <body>
@@ -46,7 +47,7 @@
   <video muted autoplay></video>
 
   <script src="javascripts/camera.js"></script>
-
+<p>Data: <span id="dataMe"></span></p>
 <p>Audio: <span id="selectMe"></span></p>
 
 <p>This Just for test yo Know.</p>
