--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <p id="result"></p>
   
   <!--<script src="javascripts/camera.js"></script>-->
-  <script src="javascripts/qrcode-decoder.js"></script>
+  <script src="javascripts/qrcode-decoder.min.js"></script>
   <script type="text/javascript">
     var qr = new QCodeDecoder();
     var elems = {
