--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
 <p>Test on Android Camera Qrcode Scanner</p>
 
- <div class="select">
+ <!--<div class="select">
     <label for="audioSource">Audio source: </label><select id="audioSource" onchange="myFunction()"></select>
   </div>
 
   <div class="select">
     <label for="videoSource">Video source: </label><select id="videoSource" onchange="start()"></select>
-  </div>
+  </div>-->
 
   <video autoplay></video>
   <select id="cameraSelect"></select>
