--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <label for="videoSource">Video source: </label><select id="videoSource" onchange="start()"></select>
   </div>
 
-  <video autoplay></video>
+  <video autoplay style="max-height:400px;max-width:400px;"></video>
   <!--<select id="cameraSelect"></select>
   <button id="reset">Reset</button>
   <button id="stop" >Stop</button>-->
