--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
 
   <div class="select">
     <label for="videoSource">Video source: </label><select id="videoSource" onchange="start()"></select>
-  </div>-->
+  </div>
+  
+   <video autoplay style="max-height:400px;max-width:400px;" width="400" height="400"></video>
+  -->
   
   <div class="goPlay"></div>
   
   <div class="vidframe">
-    <video autoplay style="max-height:400px;max-width:400px;" width="400" height="400"></video>
+   
   </div>
   
   <!--<select id="cameraSelect"></select>
