--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
   </script>-->
   
 <p>Data: <span id="dataMe"></span></p>
-<p>Audio: <span id="selectMe"></span></p>
 
-<p>This Just for test yo Know.</p>
+<p>This Just for test yo.</p>
       </section>
       
         
@@ -115,10 +114,9 @@
     Log Source:
   </div>
   <br/><br/>
-  see: http://cirocosta.github.io/qcode-decoder/
+  <!--see: http://cirocosta.github.io/qcode-decoder/-->
+    Copyright &copy; 2016 - Andika Hermansyah
     </div>
-  
-  
-    <br/><br/><br/><br/><br/>
+    <br/><br/><br/>
   </body>
 </html>
