--- a/index.html
+++ b/index.html
@@ -36,73 +36,16 @@
 
 <p>Test on Android Camera Qrcode Scanner</p>
 
-  <!--<div class="select">
-    <label for="audioSource">Audio source: </label><select id="audioSource" onchange="myFunction()"></select>
-  </div>
-
-  <div class="select">
-    <label for="videoSource">Video source: </label><select id="videoSource" onchange="start()"></select>
-  </div>
-  
-   <video autoplay style="max-height:400px;max-width:400px;" width="400" height="400"></video>
-  -->
-  
   <div class="goPlay"></div>
   
-  <div class="vidframe">
+  <div class="vidframe" style="max-height:400px;max-width:400px;overflow:hidden;" >
    
   </div>
-  
-  <!--<select id="cameraSelect"></select>
-  <button id="reset">Reset</button>
-  <button id="stop" >Stop</button>-->
 
   <p id="result"></p>
   
   <script src="javascripts/qrcode-decoder.min.js"></script>
   <script src="javascripts/camera.js"></script>
-  
-  <!--<script type="text/javascript">
-    var qr = new QCodeDecoder();
-    var elems = {
-      selector : document.querySelector('select'),
-      reset : document.getElementById('reset'),
-      stop : document.getElementById('reset'),
-      video: document.querySelector('video'),
-      result: document.getElementById('result')
-    };
-    if (!(qr.isCanvasSupported() && qr.hasGetUserMedia())) {
-      alert('Your browser doesn\'t match the required specs.');
-      throw new Error('Canvas and getUserMedia are required');
-    }
-    function resultHandler (err, result) {
-      if (err)
-        return console.log(err.message);
-      alert(result);
-    }
-    qr.getVideoSources(function (err, sources) {
-      if (err || (sources && !sources.length)) {
-        elems.selector.remove();
-        qr.decodeFromCamera(elems.video, resultHandler);
-        return;
-      }
-      sources.forEach(function (source) {
-        var option = document.createElement('option');
-        option.value = source.id;
-        option.text = source.facing || 'default';
-        elems.selector.add(option);
-      });
-      elems.selector.onchange = function () {
-        qr.setSourceId(elems.selector.selectedOptions[0].value);
-      };
-      elems.result.innerHTML = 'Your browser is currently exposing ' +
-                                sources.length + ' cameras - use the ' +
-                                'dropdown above to select which you want ' +
-                                'to use';
-      elems.selector.onchange();
-      qr.decodeFromCamera(elems.video, resultHandler);
-    });
-  </script>-->
   
 <p>Data: <span id="dataMe"></span></p>
 
