--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
   <br/><br/>
   <!--see: http://cirocosta.github.io/qcode-decoder/-->
-    Copyright &copy; 2016 - Andika Hermansyah
+    Copyright &copy; 2016 - Andika Hermansyah &nbsp; test
     </div>
     <br/><br/><br/>
   </body>
