--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <div class="goPlay"></div>
   
-  <div class="vidframe" style="max-height:400px;max-width:400px;overflow:hidden;" >
+  <div class="vidframe" style="max-width:640px;max-width:640px;overflow:hidden;" >
    
   </div>
 
