--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <div class="goPlay"></div>
   
-  <div class="vidframe" style="max-width:50vw;max-width:50vw;overflow:hidden;" >
+  <div class="vidframe" style="max-height:80vw;max-width:80vw;overflow:hidden;" >
    
   </div>
 
