--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="print">
+    <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="screen">
 
     <title>Android Camera QRcode by andikatanpah</title>
     
